gradle refactoring